# llm-app-stack-experiments

./: .gitignore  LICENSE  README.md  activate_env.bat  environment.yml  main.py  pyproject.toml  requirements.txt
.cursor/rules/: experiments-structure.mdc
agents/a2a/hello_world/: README.md  __init__.py  card.py  client.py  core_agent.py  executor.py  main.py  pyproject.toml
configs/: example.env
docs/: README.md
lang-graph/: basic_example.py  pyproject.toml
lang-graph/azureopenai-tavily-langgraph/: README.md
lang-graph/azureopenai-tavily-langgraph/backend/: pyproject.toml
lang-graph/chat/: README.md
lang-graph/chat/backend/: azure_config_example.env  check_config.py  env.example  llm.py  main.py  pyproject.toml
lang-graph/chat/frontend/: package-lock.json  package.json
lang-graph/deepresearcher/: README.md  __init__.py  agent.py  config.py  env_example.env  graph.py  main.py  nodes.py  pyproject.toml  state.py  test_agent.py  test_reflection.py
lang-graph/function-calling-agent/: README.md  agents.py  main.py  orchestrator.py  pyproject.toml  state.py  tools_old.py
lang-graph/function-calling-agent/docs/: tool_selection_approaches.md
lang-graph/function-calling-agent/tools/: README.md  __init__.py  calculator.py  data_analyzer.py  file_tools.py  time_tool.py  translator.py  weather.py  web_search.py
lang-graph/hello-world/: README.md  basic_example.py  pyproject.toml
lang-graph/plan-and-execute/: README.md  config.py  executor.py  graph.py  llm.py  main.py  plan.py  prompts.py  pyproject.toml  tools.py
lang-graph/plan-and-execute/api/: main.py  models.py
lang-graph/plan-and-execute/frontend/: next.config.ts
lang-graph/react-intro/: README.md  agents.py  main.py  orchestrator.py  pyproject.toml  state.py
lang-graph/react-intro/tools/: __init__.py  calculator_tool.py  concept_explainer.py  memory_tool.py  reasoning_tool.py  search_tool.py  verification_tool.py
lang-graph/react-reasoning-agent/: README.md  agents.py  config.py  main.py  orchestrator.py  prompts.py  pyproject.toml  reasoning_strategies.py  state.py
lang-graph/react-reasoning-agent/tools/: __init__.py  calculator_tool.py  content_generator_tool.py  datetime_tool.py  (+16 more)
langchain/: .gitkeep
rag/: README.md  advanced_rag.py  basic_rag.py  check_env.py  env_example.txt  evaluate_rag.py  pyproject.toml  quick_start.py
rag/sample_docs/: ai_basics.txt  llm_and_rag.txt  machine_learning.txt
scripts/: setup.bat  setup.sh
utils/: __init__.py
(+16 files in other folders)
