[project]
name = "deepresearcher"
version = "0.1.0"
description = "基于LangGraph的ReAct(Reasoning and Acting)的deepresearcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoflake>=2.3.1",
    "langchain>=0.3.26",
    "langgraph>=0.5.2",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.1.0",
    "requests>=2.31.0",
] 