[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-world-agent"
version = "0.1.0"
description = "A simple A2A Hello World agent example"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Assistant", email = "assistant@example.com"}
]
dependencies = [
    "a2a-sdk>=0.2.9",
    "uvicorn>=0.24.0",
    "click>=8.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
hello-world-agent = "agent:main"

[tool.hatch.build.targets.wheel]
include = [
    "agent.py",
    "__init__.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88 